Update pages workflow to build the wasm artifact

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,13 +30,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+
       - name: Setup Pages
         uses: actions/configure-pages@v2
+
+      - name: Build wasm
+        run: |
+          cd cmd/wasm
+          make build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload
           path: 'cmd/wasm/assets'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
