Update makefile to run static-server, instead of a bespoke server file
Update wasm_exec for Go 1.22

--- a/cmd/wasm/Makefile
+++ b/cmd/wasm/Makefile
@@ -4,4 +4,4 @@ build:
 	GOOS=js GOARCH=wasm go build -o assets/gosudoku.wasm main.go
 
 serve:
-	go run ./server
+	go run github.com/eliben/static-server@latest -port 8899 assets/
